--- a/helm-values/docker-desktop/cassandra-values.yaml
+++ b/helm-values/docker-desktop/cassandra-values.yaml
@@ -3,16 +3,22 @@ replicaCount: 1
 image:
   registry: docker.io
   repository: bitnami/cassandra
-  tag: latest
+  tag: "4.1.3"
 
 jvm:
-  maxHeapSize: 1024M
-  newHeapSize: 100M
+  maxHeapSize: 2G
+  newHeapSize: 512M
 
 resources:
   limits:
-    cpu: "500m"
-    memory: "3072Mi"
+    cpu: 4
+    memory: "3Gi"
   requests:
-    cpu: "200m"
-    memory: "2048Mi"
+    cpu: 2
+    memory: "1Gi"
+
+extraEnvVars:
+  - name: MAX_HEAP_SIZE
+    value: "2G"
+  - name: HEAP_NEWSIZE
+    value: "512M"
